data/derived/comb/progs/unify/prog7869.ml.out
Characters 102-104:
  cloneHelper 0  l1 -1*(diff) 
                 ^^
Error: This expression has type 'a list
       but an expression was expected of type int
